--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>MiniApp Start</title>
+  <title>Graffiti Report</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <h2>Добро пожаловать в MiniApp!</h2>
-  <button onclick="window.Telegram.WebApp.sendData('Привет от миниаппа!')">
-    Отправить данные в Telegram
+  <h1>Йоу печение, програмное обеспечение!</h1>
+  <button onclick="">
+    Кнопка (ничего не делает)
   </button>
   <script>
     window.Telegram.WebApp.expand(); // Растягивает окно в Telegram
