--- a/index.html
+++ b/index.html
@@ -1,86 +1,116 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мои заявки</title>
-
-    <!-- Подключение шрифта Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
-
-    <style>
-        /* Стили для всей страницы */
-        body {
-            font-family: "Inter", sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #F3F3F3; /* Цвет фона */
-        }
-
-        /* Стили для шапки */
-        header {
-            background-color: white;
-            padding: 16px 16px 8px 16px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Легкая тень для шапки */
-        }
-
-        /* Стили для контейнера кнопок */
-        .header-buttons {
-            display: flex;
-            gap: 9px; /* Расстояние между кнопками */
-            width: 100%;
-        }
-
-        /* Общие стили для кнопок */
-        .button {
-            flex: 1; /* Важный параментр для растягивания кнопок */
-            text-align: center;
-            padding: 8px 0;
-
-            border: none;
-            border-radius: 8px;
-            font-size: 14px;
-            line-height: 18px;
-            cursor: pointer;
-        }
-
-        /* Стили для активной кнопки */
-        .button-active {
-            background-color: #4E3B2C;
-            color: white;
-        }
-
-        /* Стили для неактивной кнопки */
-        .button-inactive {
-            background-color: #CACACA;
-            color: white;
-        }
-
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Мои заявки</title>
+  <!-- Подключение шрифта Inter -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Inter", sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #F3F3F3;
+    }
+    header {
+      background-color: white;
+      padding: 16px 16px 8px 16px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+    .header-buttons {
+      display: flex;
+      gap: 9px;
+      width: 100%;
+    }
+    .button {
+      flex: 1;
+      text-align: center;
+      padding: 8px 0;
+      border: none;
+      border-radius: 8px;
+      font-size: 14px;
+      line-height: 18px;
+      cursor: pointer;
+    }
+    .button-active {
+      background-color: #4E3B2C;
+      color: white;
+    }
+    .button-inactive {
+      background-color: #CACACA;
+      color: white;
+    }
+    /* Стили для списка заявок */
+    #applications-list ul {
+      list-style: none;
+      padding: 0;
+    }
+    #applications-list li {
+      background: white;
+      margin-bottom: 10px;
+      padding: 15px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-    <!-- Шапка сайта -->
-    <header>
-        <div class="header-buttons">
-            <!-- Активная кнопка -->
-            <button class="button button-active" id="ButtonMyApplication">Мои заявки</button>
+  <!-- Шапка сайта -->
+  <header>
+    <div class="header-buttons">
+      <button class="button button-active" id="ButtonMyApplication">Мои заявки</button>
+      <button class="button button-inactive" id="ButtonCreatApplication">Создать новую</button>
+    </div>
+  </header>
 
-            <!-- Неактивная кнопка -->
-            <button class="button button-inactive" id="ButtonCreatApplication">Создать новую</button>
-        </div>
-    </header>
+  <!-- Контейнер для заявок -->
+  <div id="applications-list"></div>
 
-    <script>
-        const ButtonMyApplication = document.getElementById('ButtonMyApplication');
-        const ButtonCreatApplication = document.getElementById('ButtonCreatApplication');
+  <script>
+  const ButtonMyApplication = document.getElementById('ButtonMyApplication');
+  const ButtonCreatApplication = document.getElementById('ButtonCreatApplication');
+  ButtonCreatApplication.addEventListener('click', function() {
+      window.location.href = 'new-application.html';
+  });
 
-        ButtonCreatApplication.addEventListener('click', function() {
-            window.location.href = 'new-application.html';
-        });
+  // --- Код для Telegram WebApp
+  function renderApplications(applications) {
+      const list = document.getElementById('applications-list');
+      if (!applications.length) {
+          list.innerHTML = "<p>У вас пока нет заявок.</p>";
+          return;
+      }
+      let html = '<ul>';
+      for (const app of applications) {
+          html += `<li>
+                    <b>Локация:</b> ${app.location ? app.location : '-'}<br>
+                    <b>Комментарий:</b> ${app.comment ? app.comment : '-'}<br>
+                    <b>Статус:</b> ${app.status ? app.status : '-'}
+                  </li>`;
+      }
+      html += '</ul>';
+      list.innerHTML = html;
+  }
 
+  // Получение заявок пользователя по Telegram ID
+  window.addEventListener('DOMContentLoaded', function() {
+      let tg_id = null;
+      if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) {
+          tg_id = Telegram.WebApp.initDataUnsafe.user.id;
+      }
 
-    </script>
+      if (!tg_id) {
+          document.getElementById('applications-list').innerHTML = '<p>Для просмотра заявок откройте приложение в Telegram.</p>';
+          return;
+      }
+
+      fetch('https://thefid.pythonanywhere.com/api/my_applications?tg_id=' + tg_id)
+          .then(response => response.json())
+          .then(data => renderApplications(data))
+          .catch(() => { document.getElementById('applications-list').innerHTML = "<p>Ошибка загрузки данных.</p>"; });
+  });
+  </script>
 </body>
 </html>
