--- a/new-application.html
+++ b/new-application.html
@@ -6,49 +6,13 @@
   <title>Создать заявку - Graffity Report</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: "Inter", Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #F3F3F3;
-      color: #222;
-    }
-    header {
-      background: white;
-      padding: 16px 16px 8px 16px;
-      box-shadow: 0 2px 6px #0001;
-    }
-    .header-buttons {
-      display: flex;
-      gap: 9px;
-      width: 100%;
-    }
-    .button {
-      flex: 1;
-      text-align: center;
-      padding: 8px 0;
-      border: none;
-      border-radius: 8px;
-      font-size: 14px;
-      line-height: 18px;
-      cursor: pointer;
-    }
-    .button-inactive {
-      background: #CACACA;
-      color: white;
-    }
-    .button-active {
-      background: #4E3B2C;
-      color: white;
-    }
-    .container {
-      max-width: 400px;
-      margin: 36px auto 0 auto;
-      background: #fff;
-      border-radius: 10px;
-      padding: 25px;
-      box-shadow: 0 4px 16px #0002;
-    }
+    body { font-family: "Inter", Arial, sans-serif; margin: 0; padding: 0; background: #F3F3F3; color: #222; }
+    header { background: white; padding: 16px 16px 8px 16px; box-shadow: 0 2px 6px #0001; }
+    .header-buttons { display: flex; gap: 9px; width: 100%; }
+    .button { flex: 1; text-align: center; padding: 8px 0; border: none; border-radius: 8px; font-size: 14px; line-height: 18px; cursor: pointer; }
+    .button-inactive { background: #CACACA; color: white; }
+    .button-active { background: #4E3B2C; color: white; }
+    .container { max-width: 400px; margin: 36px auto 0 auto; background: #fff; border-radius: 10px; padding: 25px; box-shadow: 0 4px 16px #0002; }
     h2 { margin-bottom: 18px; }
     label, input, textarea, button { width: 100%; margin-bottom: 12px; font-size: 1em; }
     input, textarea { padding: 10px; border-radius: 5px; border: 1px solid #ddd; }
@@ -68,14 +32,36 @@
   </style>
 </head>
 <body>
-  <!-- Верхнее меню -->
+<script>
+window.addEventListener('DOMContentLoaded', function() {
+  let infoBlock = document.createElement('div');
+  infoBlock.style.background = '#ffe';
+  infoBlock.style.color = '#222';
+  infoBlock.style.padding = '10px';
+  infoBlock.style.borderRadius = '8px';
+  infoBlock.style.fontSize = '14px';
+  infoBlock.style.margin = '12px';
+  if (window.Telegram && Telegram.WebApp) {
+    Telegram.WebApp.ready();
+    if (Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) {
+      infoBlock.innerHTML = "Это Telegram Mini App!<br>ID: "
+        + Telegram.WebApp.initDataUnsafe.user.id
+        + "<br>Имя: " + Telegram.WebApp.initDataUnsafe.user.first_name;
+    } else {
+      infoBlock.innerHTML = "WebApp загружен, но нет user-info.<br>Откройте через Telegram!";
+    }
+  } else {
+    infoBlock.innerHTML = "Открыто вне Telegram WebApp.<br>Telegram объект не найден!";
+  }
+  document.body.prepend(infoBlock);
+});
+</script>
   <header>
     <div class="header-buttons">
       <button class="button button-inactive" id="ButtonMyApplication">Мои заявки</button>
       <button class="button button-active" id="ButtonCreatApplication">Создать новую</button>
     </div>
   </header>
-  <!-- Форма -->
   <div class="container">
     <h2>Создать новую заявку</h2>
     <form id="apply-form">
@@ -88,15 +74,12 @@
     <div class="msg" id="result-msg"></div>
   </div>
   <script>
-    // Кнопки для навигации
     document.getElementById('ButtonMyApplication').addEventListener('click', function() {
-      window.location.href = 'index.html'; // Сюда добавь ссылку на страницу "Мои заявки"
+      window.location.href = 'index.html';
     });
     document.getElementById('ButtonCreatApplication').addEventListener('click', function() {
       window.location.href = 'new-application.html';
     });
-
-    // Отправка формы c передачей Telegram user id
     document.getElementById('apply-form').onsubmit = async function(e) {
       e.preventDefault();
       let tg_id = null;
